--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
       <h2 style="color: green;">LinkedIn : <a style="color: green;" href="https://www.linkedin.com/in/your-linkedin">Connect with me on LinkedIn! Click Here</a></h2>
       <h2 style="color: green;">Quote    : Just do it</h2>
   </div>
+  <div style="border: solid; color:black">
+      <h2 style="color: #FBB917;">Name   : ME</h2>
+      <h2 style="color: #FBB917;">Github : <a style="color: #FBB917;" href="https://github.com/your-github">See My Github Profile! Click Here</a></h2>
+      <h2 style="color: green;">LinkedIn : <a style="color: green;" href="https://www.linkedin.com/in/your-linkedin">Connect with me on LinkedIn! Click Here</a></h2>
+      <h2 style="color: green;">Quote    : No quotes needed</h2>
+  </div>
 </body>
 </html>
